Update to latest snapshots to verify behavior of TB changes
DO NOT MERGE

--- a/testbench-api/pom.xml
+++ b/testbench-api/pom.xml
@@ -31,6 +31,10 @@
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        <repository>
+            <id>vaadin-snapshots</id>
+            <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots</url>
+        </repository>
     </repositories>
 
     <build>
