--- a/client-compiled/pom.xml
+++ b/client-compiled/pom.xml
@@ -7,6 +7,7 @@
 		<artifactId>vaadin-root</artifactId>
 		<version>8.2-SNAPSHOT</version>
 	</parent>
+	<!-- Needed by a plugin in release build -->
 	<groupId>com.vaadin</groupId>
 	<artifactId>vaadin-client-compiled</artifactId>
 	<name>vaadin-client-compiled</name>
@@ -96,7 +97,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
 				<configuration>
 					<archive>
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
